newtype-tools/tests/newtype-fail/struct-tuple.rs
use newtype_tools::Newtype;

#[derive(Newtype)]
struct N(u64, u64);

fn main() {}
